change get() to getFirst()